@startuml
' hide the spot
' hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "User" as user {
  *id : INTEGER NOT NULL [PK]
  --
  username : VARCHAR(50)
  email : VARCHAR(255)
  password : TEXT
  date_joined: TIMESTAMP
}

entity "Pose" as pose {
  *id : INTEGER NOT NULL [PK]
  --
  sanskrit_name : VARCHAR(50)
  english_name : VARCHAR(50)
  description: TEXT
  benefits : VARCHAR(100)
  img_url_svg : VARCHAR(255)
  img_url_jpg : VARCHAR(255)
  img_url_svg_alt : VARCHAR(255)
  difficultyId : INTEGER [FK]
}

entity "Category" as category {
  *id : INTEGER NOT NULL [PK]
  --
  category_name : VARCHAR(50)
  description : TEXT
}

entity "Difficulty" as difficulty {
  *id : INTEGER NOT NULL [PK]
  --
  difficulty_level : VARCHAR(50)
}

entity "Session" as session {
  *id : INTEGER NOT NULL [PK]
  --
  title : VARCHAR(255)
  description : TEXT
  duration : INTEGER
  difficultyId : INTEGER [FK]
  userId : INTEGER NULL [FK]
  isCustom : BOOLEAN
}

entity "Launched_Session" {
  *userId : INTEGER [PK, FK]
  *sessionId : INTEGER [PK, FK]
  *start_date : TIMESTAMP [PK]
  --
  end_date : TIMESTAMP
}

entity "Pose_Category" {
  *poseId : INTEGER [PK, FK]
  *categoryId : INTEGER [PK, FK]
}

entity "Session_Pose" {
  *sessionId : INTEGER [PK, FK]
  *poseId : INTEGER [PK, FK]
}

'user' and 'session' relation
user |o--o{ session

'session' and 'difficulty' relation
session }|--o{ difficulty

'user' and 'Launched_Session' relation
Launched_Session }|--|| user

'session' and 'Launched_Session' relation
Launched_Session }|--|| session

'pose' and 'Pose_Category' relation
pose ||--o{ Pose_Category

'category' and 'Pose_Category' relation
category ||--o{ Pose_Category

'pose' and 'Session_Pose' relation
session ||--o{ Session_Pose

'session' and 'Session_Pose' relation
Session_Pose }|--|| pose

@enduml
